force-app/main/default/objects/Employment__c/Employment__c.object-meta.xml
<CustomObject>
    <label>Employment</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Em Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>