force-app/main/default/objects/Employment__c/fields/Contract_Hours__c.field-meta.xml
<CustomField>
    <fullName>Contract_Hours__c</fullName>
    <label>Contract Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>