force-app/main/default/objects/Employment__c/fields/Employees_Assigned_to_Unit__c.field-meta.xml
<CustomField>
    <fullName>Employees_Assigned_to_Unit__c</fullName>
    <formula>Name__r.Assigned_to_Unit__r.Name</formula>
    <label>Employees Assigned to Unit</label>
    <type>Text</type>
</CustomField>