force-app/main/default/objects/Employment__c/fields/End_Date_Probation__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Probation__c</fullName>
    <label>End Date Probation</label>
    <type>Date</type>
</CustomField>