force-app/main/default/objects/Employment__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Employment</relationshipLabel>
    <relationshipName>Employment</relationshipName>
    <type>Lookup</type>
</CustomField>