force-app/main/default/objects/Employment__c/fields/Record_Type_ID_Employment_Contract__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID_Employment_Contract__c</fullName>
    <formula>IF( RecordType.Name=&quot;Employment Contract&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type ID = Employment Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>