force-app/main/default/objects/Employment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(NOT(ISBLANK(StartDate__c)) &amp;&amp; NOT(ISBLANK( End_Date__c)), &apos;Inactive&apos;, IF(ISBLANK(StartDate__c), &apos;No start date specified&apos;, &apos;Active&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>