force-app/main/default/objects/Employment__c/fields/Tax_File__c.field-meta.xml
<CustomField>
    <fullName>Tax_File__c</fullName>
    <label>Tax File #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>