force-app/main/default/objects/Employment__c/fields/Yrs_in_Employment__c.field-meta.xml
<CustomField>
    <fullName>Yrs_in_Employment__c</fullName>
    <description>From Employment Contract</description>
    <formula>IF(
RecordType.Name = &quot;Employment Contract&quot;,
ROUND(
(IF(
ISBLANK(End_Date__c),
TODAY(),
End_Date__c
) - StartDate__c) / 365.25,
2
),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Start Date on Employment Contract to Today</inlineHelpText>
    <label>Yrs in Employment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>