force-app/main/default/objects/Employment__c/fields/Yrs_in_Industry_Prior_to_WD__c.field-meta.xml
<CustomField>
    <fullName>Yrs_in_Industry_Prior_to_WD__c</fullName>
    <inlineHelpText>How many years experience in the industry prior to Wild Desert</inlineHelpText>
    <label>Yrs in Industry (Prior to WD)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>