force-app/main/default/objects/Employment__c/fields/Yrs_in_Industry_Total__c.field-meta.xml
<CustomField>
    <fullName>Yrs_in_Industry_Total__c</fullName>
    <description>Yrs in Employment + Yrs in Industry</description>
    <formula>IF(
RecordType.Name = &quot;Employment Contract&quot;, Yrs_in_Industry_Prior_to_WD__c + Yrs_in_Employment__c,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yrs in Industry (Total)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>