force-app/main/default/objects/Employment__c/fields/Yrs_in_Position__c.field-meta.xml
<CustomField>
    <fullName>Yrs_in_Position__c</fullName>
    <formula>IF(
    RecordType.Name = &quot;Position&quot;,
    ROUND(
        (IF(
            ISBLANK(End_Date__c),
            TODAY(),
            End_Date__c
        ) - StartDate__c) / 365.25,
        2
    ),
    NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yrs in Position</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>