force-app/main/default/objects/Employment__c/recordTypes/Employment_Contract.recordType-meta.xml
<RecordType>
    <fullName>Employment_Contract</fullName>
    <active>true</active>
    <label>Employment Contract</label>
</RecordType>