force-app/main/default/objects/Employment__c/recordTypes/Resume.recordType-meta.xml
<RecordType>
    <fullName>Resume</fullName>
    <active>true</active>
    <label>Resume</label>
</RecordType>