force-app/main/default/objects/Employment__c/recordTypes/Unit_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Unit_Assignment</fullName>
    <active>true</active>
    <description>Employment Record to use to assign an employee to a Unit</description>
    <label>Unit Assignment</label>
</RecordType>