force-app/main/default/objects/Employment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Position__c</columns>
    <columns>Employment_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>StartDate__c</columns>
    <columns>End_Date__c</columns>
    <columns>End_Date_Probation__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name__c</field>
        <operation>contains</operation>
        <value>Hayden</value>
    </filters>
    <label>All</label>
</ListView>