force-app/main/default/objects/Employment__c/listViews/Rig_10.listView-meta.xml
<ListView>
    <fullName>Rig_10</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Position__c</columns>
    <columns>Employment_Type__c</columns>
    <columns>Unit__c</columns>
    <columns>Employees_Assigned_to_Unit__c</columns>
    <columns>StartDate__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employees_Assigned_to_Unit__c</field>
        <operation>equals</operation>
        <value>Rig 10</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Rig 10</label>
</ListView>