force-app/main/default/objects/Employment__c/listViews/Rig_28.listView-meta.xml
<ListView>
    <fullName>Rig_28</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Position__c</columns>
    <columns>Unit__c</columns>
    <columns>StartDate__c</columns>
    <columns>Yrs_Assigned_to_Unit__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employees_Assigned_to_Unit__c</field>
        <operation>equals</operation>
        <value>Rig 28</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Rig 28</label>
    <sharedTo>
        <group>Finance</group>
    </sharedTo>
</ListView>